@@ -110,7 +110,6 @@ importFrom(GSEABase,NullIdentifier)
 importFrom(GSEABase,geneIdType)
 importFrom(GSEABase,geneIds)
 importFrom(GSEABase,setName)
-importFrom(GSVA,gsva)
 importFrom(Matrix,rankMatrix)
 importFrom(circlize,colorRamp2)
 importFrom(edgeR,camera.DGEList)
